[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentpier"
dynamic = ["version"]
description = "Python SDK for the AgentPier trust scoring API"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "AgentPier", email = "support@agentpier.org"}
]
keywords = ["agentpier", "trust", "ai", "agents", "marketplace", "reputation", "scoring", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-mock>=3.0", 
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
    "twine>=4.0"
]

[project.urls]
Homepage = "https://agentpier.org"
Documentation = "https://docs.agentpier.org"
Repository = "https://github.com/gatewaybuddy/agentpier"
"Bug Tracker" = "https://github.com/gatewaybuddy/agentpier/issues"
"API Reference" = "https://api.agentpier.org/docs"

[tool.setuptools.dynamic]
version = {attr = "agentpier.__version__"}

[tool.setuptools.packages.find]
include = ["agentpier*"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests"
]
python_files = [
    "test_*.py",
    "*_test.py"
]